<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="792dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/lifting_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="70dp"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="30dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="20dp"
            android:background="#d92987"
            android:text="@string/confirm" />

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="47dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fp" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sing_up" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>